CORE-5171: Fixing PLP filter arrow and header gap.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/product-list/_product-list.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/sass/components/product-list/_product-list.scss
@@ -117,6 +117,12 @@
       border-color: $plp_facet_label_border_mobile;
       background: $plp_facet_label_bg_mobile;
 
+      &.is-active {
+        &::after {
+          line-height: 1.23;
+        }
+      }
+
       &::after {
         border-#{$left}: 1px solid $primary_dropdown_arrow_left_border;
         color: $primary_dropdown_arrow_icon;
